--- a/templates/index.html
+++ b/templates/index.html
@@ -1,58 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Price Checker</title>
-</head>
-<body>
-    {% block content %}
-    <h1>Stock Price Checker</h1>
-    <p>Enter a ticker symbol and a time interval to get a graph of the price!</p>
-    <form method="POST" action="info">
-        <div>
-            <label for="symbol">Ticker Symbol</label>
-            <input type="text" name="symbol" placeholder="Enter ticker symbol"/>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        />
+
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+            crossorigin="anonymous"
+        />
+
+        <title>Stock Price Checker</title>
+    </head>
+    <body>
+        <div class="container">
+            {% block content %}
+            <h1 class="text-center">Stock Price Checker</h1>
+            <p class="text-center">
+                Enter a ticker symbol and an interval to get the relevant price
+                data!
+            </p>
+            <div class="row justify-content-center">
+                <div class="col-lg-4 order-md-last">
+                    <form method="POST" action="info">
+                        <div class="form-group">
+                            <h4 class="form-label">Ticker Symbol</h4>
+                            <input
+                                type="text"
+                                name="symbol"
+                                placeholder="Enter ticker symbol"
+                                class="form-control"
+                            />
+                        </div>
+                        <hr />
+                        <h4 class="form-label">Interval</h4>
+                        <div class="form-group">
+                            <input
+                                class="form-check-input"
+                                type="radio"
+                                id="daily"
+                                name="interval"
+                                value="TIME_SERIES_DAILY"
+                                checked
+                            />
+                            <label for="daily" class="form-check-label"
+                                >Daily</label
+                            >
+                        </div>
+
+                        <div class="form-group">
+                            <input
+                                class="form-check-input"
+                                type="radio"
+                                id="weekly"
+                                name="interval"
+                                value="TIME_SERIES_WEEKLY"
+                            />
+                            <label for="weekly" class="form-check-label"
+                                >Weekly</label
+                            >
+                        </div>
+
+                        <div class="form-group">
+                            <input
+                                class="form-check-input"
+                                type="radio"
+                                id="monthly"
+                                name="interval"
+                                value="TIME_SERIES_MONTHLY"
+                            />
+                            <label for="monthly" class="form-check-label"
+                                >Monthly</label
+                            >
+                        </div>
+                        <hr />
+                        <button type="submit" class="btn btn-primary">
+                            Submit
+                        </button>
+                    </form>
+                    {% if error %}
+                    <p class="alert alert-danger mt-3">{{ error }}</p>
+                    {% endif %}
+                </div>
+            </div>
+            {% endblock %}
         </div>
-        <p>Interval</p>
-        <div>
-            <input
-                type="radio"
-                id="daily"
-                name="interval"
-                value="TIME_SERIES_DAILY"
-                checked
-            />
-            <label for="daily">Daily</label>
-        </div>
-    
-        <div>
-            <input
-                type="radio"
-                id="weekly"
-                name="interval"
-                value="TIME_SERIES_WEEKLY"
-            />
-            <label for="weekly">Weekly</label>
-        </div>
-    
-        <div>
-            <input
-                type="radio"
-                id="monthly"
-                name="interval"
-                value="TIME_SERIES_MONTHLY"
-            />
-            <label for="monthly">Monthly</label>
-        </div>
-    
-        <button type="submit" value="Submits">Submit</button>
-        
-    </form>
-    {% if error %}
-        <p>{{ error }}</p>
-    {% endif %}
-    {% endblock %}
-</body>
+    </body>
 </html>
